[package]
name = "crove"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"local-ip-address" = "0.4.4"
"hostname" = "^0.3.1"
"tokio" = { version = "1", features = ["full"] }
"actix-web" = "4.0.0-rc.1"
"serde" = { version ="1", features = ["derive"] }
"serde_json" = "1"
"serde_bytes" = "0.11.5"
"futures" = "0.3"
"futures-util" = "0.3.21"
"mdns" = "3.0.0"
"reqwest" = { version="0.11.9", features = ["json"] }